--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,10 @@ repositories {
 }
 
 dependencies {
+    implementation platform('org.springframework.boot:spring-boot-dependencies:2.4.5')
+    implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    runtimeOnly 'com.h2database:h2:1.4.200'
     testImplementation 'junit:junit:4.13'
     implementation 'com.google.guava:guava:29.0-jre'
     implementation 'io.grpc:grpc-protobuf:1.22.1'
@@ -32,8 +36,6 @@ dependencies {
     implementation 'io.grpc:grpc-stub:1.22.1'
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
     implementation 'org.jetbrains.xodus:xodus-environment:1.3.91'
-    implementation 'org.slf4j:slf4j-api:1.7.32'
-    implementation 'org.slf4j:slf4j-simple:1.7.32'
     compileOnly 'org.projectlombok:lombok:1.18.22'
     annotationProcessor 'org.projectlombok:lombok:1.18.22'
 }
