--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
     runtimeOnly 'com.h2database:h2:1.4.200'
     testImplementation 'junit:junit:4.13'
     implementation 'com.google.guava:guava:29.0-jre'
@@ -39,6 +40,10 @@ dependencies {
     implementation 'org.jetbrains.xodus:xodus-environment:1.3.91'
     compileOnly 'org.projectlombok:lombok:1.18.22'
     annotationProcessor 'org.projectlombok:lombok:1.18.22'
+}
+
+test {
+    useJUnit()
 }
 
 sourceSets {
