--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation 'io.grpc:grpc-stub:1.22.1'
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
     implementation 'org.jetbrains.xodus:xodus-environment:1.3.91'
+    implementation 'org.json:json:20210307'
     compileOnly 'org.projectlombok:lombok:1.18.22'
     annotationProcessor 'org.projectlombok:lombok:1.18.22'
 }
