--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 
 grpc.port=26658
+tendermint.base.uri=http://localhost:26657
