--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     runtimeOnly 'com.h2database:h2:1.4.200'
     testImplementation 'junit:junit:4.13'
+    compile 'net.i2p.crypto:eddsa:0.3.0'
     implementation 'com.google.guava:guava:29.0-jre'
     implementation 'io.grpc:grpc-protobuf:1.22.1'
     implementation 'io.grpc:grpc-netty-shaded:1.22.1'
