started refactoring fund service for governance

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.h2.console.enabled=true
 
 grpc.port=26658
 tendermint.base.uri=http://localhost:26657
+
+eth.private.key=xxx
+eth.node=https://mainnet.infura.io/v3/xxx
